Add link to ycsb slides

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                     <h3 class="panel-title"><strong>Others</strong></h3>
                 </div>
                 <div class="panel-body">
+                    <p> <a href="files/ycsb-overview.pdf">Quick introduction to YCSB (hands-on)</a> </p>
                 <!-- <p>Helen is currently a Lv. 15 HK Enlightened agent in <a href="https://www.ingress.com" target="_blank">Ingress</a>.</p> -->
                     <a href="#top">[Top]</a>
                 </div>
