--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="container">
             <div id="home" class="well">
-                Helen is a current Ph.D. student under the supervision of <a href="http://www.cse.cuhk.edu.hk/~pclee" target="_blank">Prof. Patrick P.C. Lee</a> in the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong</a>. She is also a member of the <a href="http://adslab.cse.cuhk.edu.hk" target="_blank">ADSLab</a>. She received her B.Eng. in Computer Engineering from the same department in 2013. Her research interests include reliability and efficiency of flash-based storage system.
+                Helen is a currently Ph.D. candidate under the supervision of <a href="http://www.cse.cuhk.edu.hk/~pclee" target="_blank">Prof. Patrick P.C. Lee</a> in the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong</a>. She is also a member of the <a href="http://adslab.cse.cuhk.edu.hk" target="_blank">ADSLab</a>. She received her B.Eng. in Computer Engineering from the same department in 2013. Her research interests include reliability and efficiency of flash-based storage system.
             </div>
             <div id="research" class="panel panel-green">
                 <div class="panel-heading">
@@ -41,13 +41,19 @@
                 <div class="panel-body">
                     <h4>Projects</h4>
                         <ul>
-                            <li><a href="#">LSM-tree-based key-value store</a>: (Coming soon)</li>
-                            <li><a href="https://github.com/mtyiu/memec" target="_blank">MemEC</a>: Erasure-code in-memory key-value store which optimizes in performance for small key-value objects. She mainly involves in implementing the erasure coding component and performance evaluations of the prototype.
-                            <li><a href="http://adslab.cse.cuhk.edu.hk/software/eplog/" target="_blank">EPLog</a>: <u>E</u>lastic <u>P</u>arity <u>Log</u>ging scheme for improving endurance and performance of SSD arrays. She mainly involves in implementing and evaluating the prototype</li>
-                            <li><a href="http://adslab.cse.cuhk.edu.hk/software/codfs/" target="_blank">CodFS</a>: Parity logging with reserved space for mitigating update overheads in erasue-coded file system. She mainly involves in evaluation and field deployment of the file system in third-party clusters.</li>
+                            <li><a href="http://adslab.cse.cuhk.edu.hk/software/hashkv">HashKV</a>: Leverging <u>Hash</u>ing in LSM-tree-based <u>K</u>ey-<u>V</u>alue store to enable efficient updates under key-value separation.</li>
+                            <ul><li>She involves in implementing and evaluating the prototype.</li></ul>
+                            <li><a href="https://github.com/mtyiu/memec" target="_blank">MemEC</a>: Erasure-code in-memory key-value store which optimizes in performance for small key-value objects.
+                            <ul><li>She involves in implementing the erasure coding component and evaluating the prototype.</li></ul>
+                            <li><a href="http://adslab.cse.cuhk.edu.hk/software/eplog" target="_blank">EPLog</a>: <u>E</u>lastic <u>P</u>arity <u>Log</u>ging scheme for improving endurance and performance of SSD arrays under update-intensive workloads.</li>
+                            <ul><li>She involves in implementing and evaluating the prototype.</li></ul>
+                            <li><a href="http://adslab.cse.cuhk.edu.hk/software/codfs" target="_blank">CodFS</a>: Parity logging with reserved space for mitigating update overheads in Erasue-<u>Cod</u>ed <u>F</u>ile <u>S</u>ystem.</li>
+                            <ul><li>She involves in evaluation and field deployment of the file system in third-party clusters.</li></ul>
                         </ul>
                     <h4>Publications</h4>
                         <ol>
+                            <li><u>Helen H. W. Chan</u>, Yongkun Li, Patrick P. C. Lee, and Yinlong Xu. 2018. HashKV: Enabling Efficient Updates in KV Storage via Hashing. In Proceedings of the 2018 USENIX Annual Technical Conference (USENIX ATC).</li>
+                            <li><u>Helen H. W. Chan</u>, Yongkun Li, Patrick P. C. Lee, and Yinlong Xu. 2018. Elastic Parity Logging for SSD RAID Arrays: Design, Analysis, and Implementation. Accepted for publication in IEEE Transactions on Parallel and Distributed Systems (TPDS). </li>
                             <li>Matt M. T. Yiu, <u>Helen H. W. Chan</u>, and Patrick P. C. Lee. 2017. Erasure Coding for Small Objects in In-Memory KV Storage. In Proceedings of the 10th ACM International Systems and Storage Conference (SYSTOR).</li>
                             <li>Yongkun Li, <u>Helen H. W. Chan</u>, Patrick P. C. Lee, and Yinlong Xu. 2016. Elastic Parity Logging for SSD RAID Arrays. In Proceedings of the 46th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN) (Regular paper). </li>
                             <li>Jeremy C. W. Chan, Qian Ding, Patrick P. C. Lee, and <u>Helen H. W. Chan</u>. 2014. Parity logging with reserved space: towards efficient updates and recovery in erasure-coded clustered storage. In Proceedings of the 12th USENIX conference on File and Storage Technologies (FAST). </li>
@@ -61,14 +67,29 @@
                     <h3 class="panel-title"><strong>Teaching Experience</strong></h3>
                 </div>
                 <div class="panel-body">
-                    <h4>Teaching assistant</h4>
+                    <h4>Teaching Assistant</h4>
                         <ul>
-                            <li>CSCI4430 (Data Communication and Computer Networks): Spring 2018 (unofficial), Spring 2016, Spring 2015</li>
-                            <li>CSCI4180 (Introduction to Cloud Computing): Fall 2017 (unofficial)</li>
+                            <li>CSCI 4430 (Data Communication and Computer Networks): Spring 2018 (unofficial), Spring 2016, Spring 2015</li>
+                                <ul>
+                                    <li>VM management</li>
+                                    <li>Tutorial on implementing network translation table (NAT) using <code>libnetfilter_queue</code></li>
+                                </ul>
+                            <li>CSCI 4180 (Introduction to Cloud Computing): Fall 2017 (unofficial)</li>
+                                <ul>
+                                    <li>Tutorial on implementing Page-Rank algorithm on Hadoop</li>
+                                </ul>
                             <li>CSCI 3150 (Introduction to Operating Systems): Fall 2016</li>
+                                <ul>
+                                    <li><a href="#resource-csci3150">Tutorial on Ubuntu VM setup</a></li>
+                                    <li><a href="#resource-csci3150">Tutorial on Bash scripts writing</a></li>
+                                </ul>
                             <li>ESTR 3102 (Introduction to Operating Systems): Fall 2015, Fall 2014</li>
+                                <ul>
+                                    <li><a href="#resource-estr3102">Tutorial on VM (Gentoo and Redhat) setup</a></li>
+                                    <li><a href="#resource-estr3102">Tutorial on adding system calls in Linux kernel</a></li>
+                                </ul>
                         </ul>
-                    <h4>Teaching awards</h4>
+                    <h4>Teaching Awards</h4>
                         <ul>
                             <li>Best TA award (out of four recipients): 2014-15, 2015-16</li>
                             <li>Certificate of Merit: 2017-18</li>
@@ -83,14 +104,14 @@
                     <h3 class="panel-title"><strong>Resources</strong></h3>
                 </div>
                 <div class="panel-body">
-                    <h4>ESTR 3102 Introduction to Operating Systems (2015 Fall)</h4> 
+                    <h4><a name="resource-estr3102"></a>ESTR 3102 Introduction to Operating Systems (2015 Fall)</h4> 
                         <ul>
                           <li><a href="teaching/estr3102-2015fall/tut-1-gentoo-net.pdf" target="_blank">Tutorial 1 -- Setup a Gentoo VM (Online)</a></li>
                           <li><a href="teaching/estr3102-2015fall/tut-1-gentoo-usb.pdf" target="_blank">Tutorial 1 -- Setup a Gentoo VM (Offline with USB)</a></li>
                           <li><a href="teaching/estr3102-2015fall/tut-2-add-syscall.pdf" target="_blank">Tutorial 2 -- Add a system call</a></li>
                           <li><a href="teaching/estr3102-2015fall/tut-3-redhat.pdf" target="_blank">Tutorial 3 -- Setup a Redhat VM</a></li>
                         </ul>
-                    <h4>CSCI 3150 Introduction to Operating Systems (2016 Fall)</h4>
+                    <h4><a name="resource-csci3150"></a>CSCI 3150 Introduction to Operating Systems (2016 Fall)</h4>
                       <ul>
                         <li><a href="teaching/csci3150-2016fall/lab1/lab1.html" target="_blank">Lab 1 -- Setup a Linux (Ubuntu) Environment</a></li>
                         <li><a href="teaching/csci3150-2016fall/lab2/lab2.html" target="_blank">Lab 2 -- Basics on Bash Operators, and C program Compilation</a></li>
@@ -111,7 +132,7 @@
                 </div>
             </div>
 
-            <p class="text-right"><footnote>Last updated: 21 Jan, 2018</footnote></p>
+            <p class="text-right"><footnote>Last updated: 1 June, 2018</footnote></p>
         </div>
 
         <!--- scripts -->
