--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <ul>
                             <li>CSCI 4430 (Data Communication and Computer Networks): Spring 2018 (unofficial), Spring 2016, Spring 2015</li>
                                 <ul>
-                                    <li>VM management</li>
+                                    <li>VM arrangement</li>
                                     <li>Tutorial on implementing network translation table (NAT) using <code>libnetfilter_queue</code></li>
                                 </ul>
                             <li>CSCI 4180 (Introduction to Cloud Computing): Fall 2017 (unofficial)</li>
