--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                             <li><a href="https://github.com/mtyiu/memec" target="_blank">MemEC</a>: Erasure-code in-memory key-value store which optimizes in performance for small key-value objects.
                             <ul><li>She involves in implementing the erasure coding component and evaluating the prototype.</li></ul>
                             <li><a href="http://adslab.cse.cuhk.edu.hk/software/eplog" target="_blank">EPLog</a>: <u>E</u>lastic <u>P</u>arity <u>Log</u>ging scheme for improving the endurance, reliability, and performance of SSD arrays under update-intensive workloads.</li>
-                            <ul><li>She involves in implementing and evaluating the prototype. She also extends the design of EPLog and implements an example application (key-value store interface) running on EPLog.</li></ul>
+                            <ul>
+                                <li>She involves in implementing and evaluating the prototype.</li>
+                                <li>She also extends the design of EPLog and implements an example application (key-value store interface) running on EPLog.</li>
+                            </ul>
                             <li><a href="http://adslab.cse.cuhk.edu.hk/software/codfs" target="_blank">CodFS</a>: Parity logging with reserved space for mitigating update overheads in Erasue-<u>Cod</u>ed <u>F</u>ile <u>S</u>ystem.</li>
                             <ul><li>She involves in the evaluation and field deployment of the file system in third-party clusters.</li></ul>
                         </ul>
