--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="container">
             <div id="home" class="well">
-                Helen is a currently Ph.D. candidate under the supervision of <a href="http://www.cse.cuhk.edu.hk/~pclee" target="_blank">Prof. Patrick P.C. Lee</a> in the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong</a>. She is also a member of the <a href="http://adslab.cse.cuhk.edu.hk" target="_blank">ADSLab</a>. She received her B.Eng. in Computer Engineering from the same department in 2013. Her research interests include reliability and efficiency of flash-based storage system.
+                Helen is a currently Ph.D. Candidate under the supervision of <a href="http://www.cse.cuhk.edu.hk/~pclee" target="_blank">Prof. Patrick P.C. Lee</a> in the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong</a>. She is also a member of the <a href="http://adslab.cse.cuhk.edu.hk" target="_blank">ADSLab</a>. She received her B.Eng. in Computer Engineering from the same department in 2013. Her research interests include reliability and efficiency of flash-based storage system.
             </div>
             <div id="research" class="panel panel-green">
                 <div class="panel-heading">
@@ -41,17 +41,17 @@
                 <div class="panel-body">
                     <h4>Projects</h4>
                         <ul>
-                            <li><a href="http://adslab.cse.cuhk.edu.hk/software/hashkv">HashKV</a>: Leverging <u>Hash</u>ing in LSM-tree-based <u>K</u>ey-<u>V</u>alue store to enable efficient updates under key-value separation.</li>
-                            <ul><li>She involves in designing, implementing and evaluating the prototype.</li></ul>
-                            <li><a href="https://github.com/mtyiu/memec" target="_blank">MemEC</a>: Erasure-code in-memory key-value store which optimizes in performance for small key-value objects.
-                            <ul><li>She involves in implementing the erasure coding component and evaluating the prototype.</li></ul>
-                            <li><a href="http://adslab.cse.cuhk.edu.hk/software/eplog" target="_blank">EPLog</a>: <u>E</u>lastic <u>P</u>arity <u>Log</u>ging scheme for improving the endurance, reliability, and performance of SSD arrays under update-intensive workloads.</li>
+                            <li><a href="http://adslab.cse.cuhk.edu.hk/software/hashkv">HashKV</a>: Leverging <u>Hash</u>ing in LSM-tree-based <u>K</u>ey-<u>V</u>alue store to enable efficient updates and GC atop key-value separation</li>
+                            <ul><li>Design, implementation and evaluation</li></ul>
+                            <li><a href="https://github.com/mtyiu/memec" target="_blank">MemEC</a>: In-<u>Mem</u>ory <u>E</u>rasure-<u>C</u>oded key-value store that optimizes in performance for small key-value objects
+                            <ul><li>Implementation of the erasure coding component and evaluation</li></ul>
+                            <li><a href="http://adslab.cse.cuhk.edu.hk/software/eplog" target="_blank">EPLog</a>: <u>E</u>lastic <u>P</u>arity <u>Log</u>ging scheme for improved endurance, reliability, and performance on SSD arrays under update-intensive workloads</li>
                             <ul>
-                                <li>She involves in implementing and evaluating the prototype.</li>
-                                <li>She also extends the design of EPLog and implements an example application (key-value store interface) running on EPLog.</li>
+                                <li>Implementation and evaluation</li>
+                                <li>Design extensions and implementation of an example application (key-value store interface) running on EPLog</li>
                             </ul>
-                            <li><a href="http://adslab.cse.cuhk.edu.hk/software/codfs" target="_blank">CodFS</a>: Parity logging with reserved space for mitigating update overheads in Erasue-<u>Cod</u>ed <u>F</u>ile <u>S</u>ystem.</li>
-                            <ul><li>She involves in the evaluation and field deployment of the file system in third-party clusters.</li></ul>
+                            <li><a href="http://adslab.cse.cuhk.edu.hk/software/codfs" target="_blank">CodFS</a>: Parity logging with reserved space for mitigating update overheads in Erasue-<u>Cod</u>ed <u>F</u>ile <u>S</u>ystem</li>
+                            <ul><li>Evaluation and field deployment of CodFS in third-party clusters</li></ul>
                         </ul>
                     <h4>Publications</h4>
                         <ol>
@@ -95,7 +95,7 @@
                     <h4>Teaching Awards</h4>
                         <ul>
                             <li>Best TA award (out of four recipients): 2014-15, 2015-16</li>
-                            <li>Certificate of Merit: 2017-18</li>
+                            <li>Certificate of Merit: 2016-17</li>
                         </ul>
                     </h4>
                     <a href="#top">[Top]</a>
@@ -135,7 +135,7 @@
                 </div>
             </div>
 
-            <p class="text-right"><footnote>Last updated: 1 June, 2018</footnote></p>
+            <p class="text-right"><footnote>Last updated: 25 July, 2018</footnote></p>
         </div>
 
         <!--- scripts -->
