--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div id="body" class="container">
             <div id="home" class="well">
-                Helen is now an R&amp;D Engineer at <a href="http://www.inas.online/en/about-us.php" target="_blank">Unissoft Tech</a>, working on the projects related to cloud-based storage systems. Her main interest lies in building reliable and efficient storage solutions.
+                Helen is now an R&amp;D Engineer at <a href="http://www.inas.online/en/about-us.php" target="_blank">Unissoft Tech</a>, working on cloud-based storage solutions. Her main interest lies in building reliable and efficient storage solutions.
                 </br>
                 </br>
                 She completed her PhD study in 2018, under the supervision of <a href="http://www.cse.cuhk.edu.hk/~pclee" target="_blank">Prof. Patrick P.C. Lee</a> in the <a href="http://adslab.cse.cuhk.edu.hk" target="_blank">ADSLab</a> of the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong</a>. She received her B.Eng. in Computer Engineering from the same department in 2013.
