--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <ul>
                                 <li><a href="http://adslab.cse.cuhk.edu.hk/software/hashkv">HashKV</a>: <u>Hash</u>-based data grouping in LSM-tree-based <u>K</u>ey-<u>V</u>alue stores for efficient updates and GC atop key-value separation</li>
                                 <li><a href="https://github.com/mtyiu/memec" target="_blank">MemEC</a>: In-<u>Mem</u>ory <u>E</u>rasure-<u>C</u>oded key-value store for efficient storage and operations of small key-value objects
-                                <li><a href="http://adslab.cse.cuhk.edu.hk/software/eplog" target="_blank">EPLog</a>: <u>E</u>lastic <u>P</u>arity <u>Log</u>ging scheme for improved endurance, reliability, and performance on SSD arrays under update-intensive workloads</li>
+                                <li><a href="http://adslab.cse.cuhk.edu.hk/software/eplog" target="_blank">EPLog</a>: <u>E</u>lastic <u>P</u>arity <u>Log</u>ging scheme for improved endurance, reliability, and performance of SSD arrays under update-intensive workloads</li>
                                 <li><a href="http://adslab.cse.cuhk.edu.hk/software/codfs" target="_blank">CodFS</a>: Parity logging with reserved space for mitigating update overheads in Erasure-<u>Cod</u>ed <u>F</u>ile <u>S</u>ystems</li>
                             </ul>
                         </div>
