Revert "Update index.html"
This reverts commit 530d3d9e56a1beac025c0eb085c24b5f679e2ef5.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="navbar navbar-reverse navbar-green">
             <div class="container">
                 <div class="navbar-header">
-                    <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#menu" aria-expanded="false" aria-controls="navbar">
+                    <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#menu" aria-expanded="false" aria-controls="navbar"> 
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -32,7 +32,7 @@
 
         <div id="body" class="container">
             <div id="home" class="well">
-                Helen was a former R&amp;D Engineer at <a href="http://www.inas.online/en/about-us.php" target="_blank">Unissoft Tech</a>, working on cloud-based storage solutions. Her main interest lies in building reliable and efficient storage solutions.
+                Helen is now an R&amp;D Engineer at <a href="http://www.inas.online/en/about-us.php" target="_blank">Unissoft Tech</a>, working on cloud-based storage solutions. Her main interest lies in building reliable and efficient storage solutions.
                 </br>
                 </br>
                 She completed her PhD study in 2018, under the supervision of <a href="http://www.cse.cuhk.edu.hk/~pclee" target="_blank">Prof. Patrick P.C. Lee</a> in the <a href="http://adslab.cse.cuhk.edu.hk" target="_blank">ADSLab</a> of the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong</a>. She received her B.Eng. in Computer Engineering from the same department in 2013.
@@ -162,7 +162,7 @@
                 </div>
             </div>
 
-            <!--
+            <!-- 
             <div id="others" class="panel panel-default">
                 <div id="others-header" class="panel-heading collapsed" data-toggle="collapse" data-target="#others-content" aria-expanded="false" aria-controls="others-content">
                     <h3 class="panel-title"><strong>Others</strong></h3>
