--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
 
         <div id="body" class="container">
             <div id="home" class="well">
-                Helen is now an R&amp;D Engineer at <a href="http://www.inas.online/en/about-us.php" target="_blank">Unissoft Tech</a>, working on cloud-based storage solutions. Her main interest lies in building reliable and efficient storage solutions.
+                Helen is currently a Postdoc at CUHK, working on cloud-based storage solutions.
+                Her main interest lies in exploring and building storage solutions that are reliable and efficient.
                 </br>
                 </br>
-                She completed her PhD study in 2018, under the supervision of <a href="http://www.cse.cuhk.edu.hk/~pclee" target="_blank">Prof. Patrick P.C. Lee</a> in the <a href="http://adslab.cse.cuhk.edu.hk" target="_blank">ADSLab</a> of the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong</a>. She received her B.Eng. in Computer Engineering from the same department in 2013.
+                She worked as an R&amp;D Engineer at <a href="http://www.inas.online/en/about-us.php" target="_blank">Unissoft Tech</a> in 2019.
+                She completed her PhD study in 2018, under the supervision of <a href="http://www.cse.cuhk.edu.hk/~pclee" target="_blank">Prof. Patrick P.C. Lee</a> in the <a href="http://adslab.cse.cuhk.edu.hk" target="_blank">ADSLab</a> of the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong</a>.
+                She received her B.Eng. in Computer Engineering from the same department in 2013.
             </div>
             <div id="research" class="panel panel-green">
                 <div id="reseach-header" class="panel-heading collapsed" data-toggle="collapse" data-target="#research-content" aria-expanded="true" aria-controls="research-content">
@@ -63,8 +66,9 @@
                         <div class="tab-pane" id="research-pubs" role="tabpanel" aria-labelledby="research-pubs-tab">
                             </br>
                             <ol>
+                                <li>Yongkun Li, <u>Helen H. W. Chan</u>, Patrick P. C. Lee, and Yinlong Xu. Enabling Efficient Updates in KV Storage via Hashing: Design and Performance Evaluation. Accepted for publication in ACM Transactions on Storage (TOS). (An earlier version appeared in USENIX ATC 2018)</li>
                                 <li><u>Helen H. W. Chan</u>, Yongkun Li, Patrick P. C. Lee, and Yinlong Xu. 2018. HashKV: Enabling Efficient Updates in KV Storage via Hashing. In Proceedings of the 2018 USENIX Annual Technical Conference (USENIX ATC).</li>
-                                <li><u>Helen H. W. Chan</u>, Yongkun Li, Patrick P. C. Lee, and Yinlong Xu. 2018. Elastic Parity Logging for SSD RAID Arrays: Design, Analysis, and Implementation. IEEE Transactions on Parallel and Distributed Systems (TPDS), 29(10), pp. 2241-2253, Oct. 2018. </li>
+                                <li><u>Helen H. W. Chan</u>, Yongkun Li, Patrick P. C. Lee, and Yinlong Xu. 2018. Elastic Parity Logging for SSD RAID Arrays: Design, Analysis, and Implementation. IEEE Transactions on Parallel and Distributed Systems (TPDS), 29(10), pp. 2241-2253, Oct. 2018. (An earlier version appeared in DSN 2016)</li>
                                 <li>Matt M. T. Yiu, <u>Helen H. W. Chan</u>, and Patrick P. C. Lee. 2017. Erasure Coding for Small Objects in In-Memory KV Storage. In Proceedings of the 10th ACM International Systems and Storage Conference (SYSTOR).</li>
                                 <li>Yongkun Li, <u>Helen H. W. Chan</u>, Patrick P. C. Lee, and Yinlong Xu. 2016. Elastic Parity Logging for SSD RAID Arrays. In Proceedings of the 46th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN) (Regular paper). </li>
                                 <li>Jeremy C. W. Chan, Qian Ding, Patrick P. C. Lee, and <u>Helen H. W. Chan</u>. 2014. Parity logging with reserved space: towards efficient updates and recovery in erasure-coded clustered storage. In Proceedings of the 12th USENIX conference on File and Storage Technologies (FAST). </li>
@@ -173,7 +177,7 @@
                 </div>
             </div>
             -->
-            <p class="text-right"><footnote>Last updated: 3 February, 2019</footnote></p>
+            <p class="text-right"><footnote>Last updated: 15 September, 2019</footnote></p>
         </div>
 
         <!--- scripts -->
