Update publication status

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="tab-pane" id="research-pubs" role="tabpanel" aria-labelledby="research-pubs-tab">
                             </br>
                             <ol>
-                                <li>Yongkun Li, <u>Helen H. W. Chan</u>, Patrick P. C. Lee, and Yinlong Xu. Enabling Efficient Updates in KV Storage via Hashing: Design and Performance Evaluation. Accepted for publication in ACM Transactions on Storage (TOS). (An earlier version appeared in USENIX ATC 2018)</li>
+                                <li>Yongkun Li, <u>Helen H. W. Chan</u>, Patrick P. C. Lee, and Yinlong Xu. Enabling Efficient Updates in KV Storage via Hashing: Design and Performance Evaluation. ACM Transactions on Storage (TOS), 15(3), 20:1-20:29, August 2019. (An earlier version appeared in USENIX ATC 2018)</li>
                                 <li><u>Helen H. W. Chan</u>, Yongkun Li, Patrick P. C. Lee, and Yinlong Xu. 2018. HashKV: Enabling Efficient Updates in KV Storage via Hashing. In Proceedings of the 2018 USENIX Annual Technical Conference (USENIX ATC).</li>
                                 <li><u>Helen H. W. Chan</u>, Yongkun Li, Patrick P. C. Lee, and Yinlong Xu. 2018. Elastic Parity Logging for SSD RAID Arrays: Design, Analysis, and Implementation. IEEE Transactions on Parallel and Distributed Systems (TPDS), 29(10), pp. 2241-2253, Oct. 2018. (An earlier version appeared in DSN 2016)</li>
                                 <li>Matt M. T. Yiu, <u>Helen H. W. Chan</u>, and Patrick P. C. Lee. 2017. Erasure Coding for Small Objects in In-Memory KV Storage. In Proceedings of the 10th ACM International Systems and Storage Conference (SYSTOR).</li>
