--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Helen H.W. Chan</title>
+        <title>Helen H. W. Chan</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/mycss.css" rel="stylesheet">
     </head>
@@ -17,7 +17,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#home">Helen H.W. Chan</a>
+                    <a class="navbar-brand" href="#home">Helen H. W. Chan</a>
                 </div>
                 <div id="menu" class="navbar-collapse collapse" style="height:1px;">
                     <ul class="nav navbar-nav">
@@ -36,8 +36,8 @@
                 Her main interest lies in exploring and building storage solutions that are reliable and efficient.
                 </br>
                 </br>
-                She worked as an R&amp;D Engineer at <a href="http://www.inas.online/en/about-us.php" target="_blank">Unissoft Tech</a> in 2019.
-                She completed her PhD study in 2018, under the supervision of <a href="http://www.cse.cuhk.edu.hk/~pclee" target="_blank">Prof. Patrick P.C. Lee</a> in the <a href="http://adslab.cse.cuhk.edu.hk" target="_blank">ADSLab</a> of the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong</a>.
+                She was an R&amp;D Engineer at <a href="http://www.inas.online/en/about-us.php" target="_blank">Unissoft Tech</a> in 2019.
+                She completed her PhD study in 2018, under the supervision of <a href="http://www.cse.cuhk.edu.hk/~pclee" target="_blank">Prof. Patrick P. C. Lee</a> in the <a href="http://adslab.cse.cuhk.edu.hk" target="_blank">ADSLab</a> of the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong</a>.
                 She received her B.Eng. in Computer Engineering from the same department in 2013.
             </div>
             <div id="research" class="panel panel-green">
@@ -98,18 +98,18 @@
                         <div class="tab-pane active in" id="teaching-assist" role="tabpanel" aria-labelledby="teaching-assist-tab">
                             </br>
                             <ul>
-                                <li>CSCI 4430 (Data Communication and Computer Networks): Spring 2018 (unofficial), Spring 2016, Spring 2015
+                                <li>CSCI4430 (Data Communication and Computer Networks): Spring 2018 (unofficial), Spring 2016, Spring 2015
                                     <ul>
                                         <li>VM arrangement</li>
                                         <li>Tutorials on implementing network translation table (NAT) using <code>libnetfilter_queue</code></li>
                                     </ul>
                                 </li>
-                                <li>CSCI 4180 (Introduction to Cloud Computing): Fall 2017 (unofficial)
+                                <li>CSCI4180 (Introduction to Cloud Computing): Fall 2017 (unofficial)
                                     <ul>
                                         <li>Tutorial on implementing Page-Rank algorithm on Hadoop</li>
                                     </ul>
                                 </li>
-                                <li>CSCI 3150 (Introduction to Operating Systems): Fall 2016
+                                <li>CSCI3150 (Introduction to Operating Systems): Fall 2016
                                     <ul>
                                         <li>Tutorial on VM (Ubuntu) setup
                                             <ul>
@@ -125,7 +125,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li>ESTR 3102 (Introduction to Operating Systems): Fall 2015, Fall 2014
+                                <li>ESTR3102 (Introduction to Operating Systems): Fall 2015, Fall 2014
                                     <ul>
                                         <li>Tutorials on VM (Gentoo and Redhat) setup
                                             <ul>
@@ -177,7 +177,7 @@
                 </div>
             </div>
             -->
-            <p class="text-right"><footnote>Last updated: 15 September, 2019</footnote></p>
+            <p class="text-right"><footnote>Last updated: May 14, 2020</footnote></p>
         </div>
 
         <!--- scripts -->
