--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
         <div id="body" class="container">
             <div id="home" class="well">
-                Helen is currently a Postdoc at CUHK, working on cloud-based storage solutions.
-                Her main interest lies in exploring and building storage solutions that are reliable and efficient.
+                Helen is currently a Postdoc at <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong (CUHK)</a>, working on cloud-based storage solutions.
+                Her is interested in exploring and building reliable and efficient storage solutions.
                 </br>
                 </br>
-                She was an R&amp;D Engineer at <a href="http://www.inas.online/en/about-us.php" target="_blank">Unissoft Tech</a> in 2019.
-                She completed her PhD study in 2018, under the supervision of <a href="http://www.cse.cuhk.edu.hk/~pclee" target="_blank">Prof. Patrick P. C. Lee</a> in the <a href="http://adslab.cse.cuhk.edu.hk" target="_blank">ADSLab</a> of the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong</a>.
-                She received her B.Eng. in Computer Engineering from the same department in 2013.
+                She received the B.Eng. degree in Computer Engineering from The Chinese University of Hong Kong in 2013, and the Ph.D. degree in Computer Science and Engineering from the same university in 2018.
+                She was supervised by <a href="http://www.cse.cuhk.edu.hk/~pclee" target="_blank">Prof. Patrick P. C. Lee</a> during her Ph.D. studies, as a member of the <a href="http://adslab.cse.cuhk.edu.hk" target="_blank">Applied Distributed Systems Lab (ADSLab)</a>.
+                She was an R&amp;D Engineer at Unissoft Technology Co. Ltd. in 2019, developing a multi-cloud storage solution which integrates with the company's document management system and conducting external proof-of-concepts and trials.
             </div>
             <div id="research" class="panel panel-green">
                 <div id="reseach-header" class="panel-heading collapsed" data-toggle="collapse" data-target="#research-content" aria-expanded="true" aria-controls="research-content">
@@ -177,7 +177,7 @@
                 </div>
             </div>
             -->
-            <p class="text-right"><footnote>Last updated: May 14, 2020</footnote></p>
+            <p class="text-right"><footnote>Last updated: Oct 17, 2021</footnote></p>
         </div>
 
         <!--- scripts -->
