--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="body" class="container">
             <div id="home" class="well">
                 Helen is currently a Postdoc at <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong (CUHK)</a>, working on cloud-based storage solutions.
-                Her is interested in exploring and building reliable and efficient storage solutions.
+                She is interested in exploring and building reliable and efficient storage systems.
                 </br>
                 </br>
                 She received the B.Eng. degree in Computer Engineering from The Chinese University of Hong Kong in 2013, and the Ph.D. degree in Computer Science and Engineering from the same university in 2018.
