--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <div id="body" class="container">
             <div id="home" class="well">
                 Helen is currently a Postdoc at <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong (CUHK)</a>, working on cloud-based storage solutions.
-                She is interested in exploring and building reliable and efficient storage systems.
+                She is interested in exploring and building reliable and efficient storage solutions.
                 </br>
                 </br>
-                She received the B.Eng. degree in Computer Engineering from The Chinese University of Hong Kong in 2013, and the Ph.D. degree in Computer Science and Engineering from the same university in 2018.
+                She received the B.Eng. degree in Computer Engineering and the Ph.D. degree in Computer Science and Engineering from <a href="http://www.cuhk.edu.hk" target="_blank">The Chinese University of Hong Kong</a> in 2013 and 2018, respectively.
                 She was supervised by <a href="http://www.cse.cuhk.edu.hk/~pclee" target="_blank">Prof. Patrick P. C. Lee</a> during her Ph.D. studies, as a member of the <a href="http://adslab.cse.cuhk.edu.hk" target="_blank">Applied Distributed Systems Lab (ADSLab)</a>.
-                She was an R&amp;D Engineer at Unissoft Technology Co. Ltd. in 2019, developing a multi-cloud storage solution which integrates with the company's document management system and conducting external proof-of-concepts and trials.
+                She was an R&amp;D Engineer at Unissoft Technology Co. Ltd. in 2019, developing the multi-cloud storage system, <a href="http://adslab.cse.cuhk.edu.hk/impact.html" target="_blank">nCloud</a>, and conducting external proof-of-concepts and trials of the system.
             </div>
             <div id="research" class="panel panel-green">
                 <div id="reseach-header" class="panel-heading collapsed" data-toggle="collapse" data-target="#research-content" aria-expanded="true" aria-controls="research-content">
@@ -66,6 +66,7 @@
                         <div class="tab-pane" id="research-pubs" role="tabpanel" aria-labelledby="research-pubs-tab">
                             </br>
                             <ol>
+                                <li>Kaicheng Tang, Keyun Cheng, <u>Helen H. W. Chan</u>, Xiaolu Li, Patrick P. C. Lee, Yuchong Hu, Jie Li, and Ting-Yi Wu. 2023. Balancing Repair Bandwidth and Sub-packetization in Erasure-Coded Storage via Elastic Transformation. In Proceedings of IEEE International Conference on Computer Communications 2023 (INFOCOM 2023).</li>
                                 <li>Yongkun Li, <u>Helen H. W. Chan</u>, Patrick P. C. Lee, and Yinlong Xu. Enabling Efficient Updates in KV Storage via Hashing: Design and Performance Evaluation. ACM Transactions on Storage (TOS), 15(3), 20:1-20:29, August 2019. (An earlier version appeared in USENIX ATC 2018)</li>
                                 <li><u>Helen H. W. Chan</u>, Yongkun Li, Patrick P. C. Lee, and Yinlong Xu. 2018. HashKV: Enabling Efficient Updates in KV Storage via Hashing. In Proceedings of the 2018 USENIX Annual Technical Conference (USENIX ATC).</li>
                                 <li><u>Helen H. W. Chan</u>, Yongkun Li, Patrick P. C. Lee, and Yinlong Xu. 2018. Elastic Parity Logging for SSD RAID Arrays: Design, Analysis, and Implementation. IEEE Transactions on Parallel and Distributed Systems (TPDS), 29(10), pp. 2241-2253, Oct. 2018. (An earlier version appeared in DSN 2016)</li>
@@ -177,7 +178,7 @@
                 </div>
             </div>
             -->
-            <p class="text-right"><footnote>Last updated: Oct 17, 2021</footnote></p>
+            <p class="text-right"><footnote>Last updated: Jan 2, 2023</footnote></p>
         </div>
 
         <!--- scripts -->
